# comp_grafica

./: README.md  hello  hello.cpp  square  square.cpp  triangle  triangle.cpp  viewPort  viewPort.cpp
atividade3/: atividade2  ex1.cpp
atividade3/ex2/: CMakeCache.txt  CMakeLists.txt  Makefile  SolarSystem  SolarSystem.cpp  SolarSystem.h  cmake_install.cmake  ex2.cpp  executee  main.cpp
atividade3/ex3/: main  main.cpp
